--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -129,7 +129,9 @@
                     <Button x:Name="배열순서" Content="배열순서" Grid.Column="0" Grid.Row="8" HorizontalAlignment="Center" Foreground="Black" FontSize="15" Margin="5"/>
                     <Button x:Name="도형A의위치" Content="도형A의 위치" Grid.Column="0" Grid.Row="9" HorizontalAlignment="Center" Foreground="Black" FontSize="12" Margin="5"/>
                     <Button x:Name="공간사용" Content="공간사용" Grid.Column="0" Grid.Row="10" HorizontalAlignment="Center" Foreground="Black" FontSize="15" Margin="5"/>
-                    <Button x:Name="중첩" Content="중첩" Grid.Column="0" Grid.Row="11" HorizontalAlignment="Center" Foreground="Black" FontSize="15" Margin="5"/>
+                    <Button x:Name="중첩" Content="중첩" Grid.Column="0" Grid.Row="11" HorizontalAlignment="Center" Foreground="Black" FontSize="15" Margin="5" Click="Bt_RR"/>
+                    <TextBlock x:Name="RR" Grid.Column="1" Grid.Row="11" Text="" FontSize="15" Foreground="Black" HorizontalAlignment="Center" Margin="10"/>
+                    
                     <Button x:Name="용지회전" Content="용지회전" Grid.Column="0" Grid.Row="12" HorizontalAlignment="Center" Foreground="Black" FontSize="15" Margin="5"/>
                     <Button x:Name="폐쇄손란" Content="폐쇄손란" Grid.Column="0" Grid.Row="13" HorizontalAlignment="Center" Foreground="Black" FontSize="15" Margin="5"/>
 
@@ -142,7 +144,9 @@
                     <Button x:Name="퇴영" Content="퇴영" Grid.Column="2" Grid.Row="9" HorizontalAlignment="Center" Foreground="Black" FontSize="15" Margin="5"/>
                     <Button x:Name="단순화" Content="단순화" Grid.Column="2" Grid.Row="10" HorizontalAlignment="Center" Foreground="Black" FontSize="15" Margin="5"/>
                     <Button x:Name="단편화" Content="단편화" Grid.Column="2" Grid.Row="11" HorizontalAlignment="Center" Foreground="Black" FontSize="15" Margin="5"/>
-                    <Button x:Name="중복곤란" Content="중복곤란" Grid.Column="2" Grid.Row="12" HorizontalAlignment="Center" Foreground="Black" FontSize="15" Margin="5"/>
+                    <Button x:Name="중복곤란" Content="중복곤란" Grid.Column="2" Grid.Row="12" HorizontalAlignment="Center" Foreground="Black" FontSize="15" Margin="5" Click="Bt_OD"/>
+                    <TextBlock x:Name="OD" Grid.Column="3" Grid.Row="12" Text="" FontSize="15" Foreground="Black" HorizontalAlignment="Center" Margin="10"/>
+                    
                     <Button x:Name="정교화" Content="정교화" Grid.Column="2" Grid.Row="13" HorizontalAlignment="Center" Foreground="Black" FontSize="15" Margin="5"/>
                     <Button x:Name="고집화" Content="고집화" Grid.Column="2" Grid.Row="14" HorizontalAlignment="Center" Foreground="Black" FontSize="15" Margin="5"/>
                     <Button x:Name="재묘사" Content="재묘사" Grid.Column="2" Grid.Row="15" HorizontalAlignment="Center" Foreground="Black" FontSize="15" Margin="5"/>
