--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -146,7 +146,9 @@
                     
                     <Button x:Name="곡선곤란" Content="곡선곤란" Grid.Column="0" Grid.Row="15" HorizontalAlignment="Center" Foreground="Black" FontSize="15" Margin="5"/>
                     <Button x:Name="각의변화" Content="각의변화" Grid.Column="0" Grid.Row="16" HorizontalAlignment="Center" Foreground="Black" FontSize="15" Margin="5"/>
-                    <Button x:Name="지각적회전" Content="지각적회전" Grid.Column="2" Grid.Row="8" HorizontalAlignment="Center" Foreground="Black" FontSize="15" Margin="5"/>
+                    <Button x:Name="지각적회전" Content="지각적회전" Grid.Column="2" Grid.Row="8" HorizontalAlignment="Center" Foreground="Black" FontSize="15" Margin="5" Click="Bt_RT"/>
+                    <TextBlock x:Name="RT" Grid.Column="3" Grid.Row="8" Text="" FontSize="15" Foreground="Black" HorizontalAlignment="Center" Margin="10"/>
+                    
                     <Button x:Name="퇴영" Content="퇴영" Grid.Column="2" Grid.Row="9" HorizontalAlignment="Center" Foreground="Black" FontSize="15" Margin="5"/>
                     
                     <Button x:Name="단순화" Content="단순화" Grid.Column="2" Grid.Row="10" HorizontalAlignment="Center" Foreground="Black" FontSize="15" Margin="5"/>
